#16261 closed bug (fixed)
Input/add-ons Wacom Intuos PTZ-431W detected by kernel, but not working
Reported by: | rrobgill | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Add-Ons | Version: | R1/beta2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The kernel appears to detect the tablet, but is not active, and does not appear in preferences->input.
The issue is observed both on hrev54326 x86_64 (virtualized), and in r1beta2 x86 (bare hardware).
Works on same systems when booting into linux.
Attachments (2)
Change History (6)
by , 4 years ago
comment:1 by , 4 years ago
Should probably be added here? https://git.haiku-os.org/haiku/tree/src/add-ons/input_server/devices/wacom/TabletDevice.cpp#n112
comment:3 by , 4 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:4 by , 4 years ago
Milestone: | Unscheduled → R1/beta3 |
---|
Move closed tickets into beta3 milestone
Note:
See TracTickets
for help on using tickets.
Syslog - wacom tablet on hrev54326