addons/input-devices Wacom PTZ-431W tablet

* Add usb ID and resolution for this tablet
* Fixes #16261

Signed-off-by: Rob Gill <rrobgill@protonmail.com>
Change-Id: I426576dc47241846d5a956d41a19186f9c599eb9
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2923
Reviewed-by: Sergei Reznikov <diver@gelios.net>